api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: rapharch
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - port: 9999
      targetPort: 9999
      protocol: TCP
      name: http
    - port: 50051
      targetPort: 50051
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: api
