api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: rapharch
  labels:
    app.kubernetes.io/name: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  rules:
    - host: api.rapharch.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 9999
  tls:
    - hosts:
        - api.rapharch.com
      secretName: api-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-grpc
  namespace: rapharch
  labels:
    app.kubernetes.io/name: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  rules:
    - host: grpc.rapharch.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 50051
  tls:
    - hosts:
        - grpc.rapharch.com
      secretName: api-grpc-tls
